--- a/package.json
+++ b/package.json
@@ -1,34 +1,79 @@
 {
-  "name": "react-made-by",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "react-made-by",
+	"version": "0.1.0",
+	"description": "React component to create a made by <name> tag",
+	"author": "Yigit Alparslan",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/ya332/react-made-by"
+	},
+	"bugs": {
+		"url": "https://github.com/ya332/react-made-by/issues"
+	},
+	"keywords": [
+		"React",
+		"Developer",
+		"Author",
+		"Tag",
+		"Created",
+		"By",
+		"Made"
+	],
+	"homepage": "https://github.com/ya332/react-made-by#readme",
+	"main": "dist/index.js",
+	"publishConfig": {
+		"access": "restricted"
+	},
+	"unpkg": "dist/react-made-by.js",
+	"peerDependencies": {
+		"prop-types": "^15.6.0",
+		"react": "^16.0.0",
+		"react-dom": "^16.0.0"
+	},
+	"devDependencies": {
+		"babel-core": "^6.21.0",
+		"babel-loader": "^7.1.4",
+		"babel-preset-env": "^1.6.1",
+		"babel-preset-react": "^6.16.0",
+		"babel-preset-stage-0": "^6.24.1",
+		"css-loader": "^3.4.1",
+		"extract-text-webpack-plugin": "^3.0.2",
+		"file-loader": "^5.0.2",
+		"node-sass": "^4.13.0",
+		"path": "^0.12.7",
+		"prop-types": "^15.6.0",
+		"react": "^16.0.0",
+		"react-dom": "^16.0.0",
+		"sass-loader": "^8.0.0",
+		"style-loader": "^1.1.2",
+		"url-loader": "^3.0.0",
+		"webpack": "^4.5.0",
+		"webpack-cli": "^3.2.1"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"prepublish": "rm -rf ./dist && npm run build"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"dependencies": {
+		"react-scripts": "^3.3.0"
+	}
 }
