--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
 	"name": "react-made-by",
 	"version": "0.1.0",
-	"description": "React component to create a made by <name> tag",
-	"author": "Yigit Alparslan",
+	"description": "React component to create a 'made by <name>' tag",
+	"author": {
+		"name": "Yigit Alparslan",
+		"email": "alparslanyigitcan@gmail.com"
+	},
 	"license": "MIT",
+	"engineStrict": true,
+	"engines": {
+		"node": ">=12.9.1"
+	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ya332/react-made-by"
+		"url": "https://github.com/ya332/react-made-by.git"
 	},
 	"bugs": {
 		"url": "https://github.com/ya332/react-made-by/issues"
@@ -21,19 +28,22 @@
 		"Made"
 	],
 	"homepage": "https://github.com/ya332/react-made-by#readme",
-	"main": "dist/index.js",
+	"main": "build/index.js",
+	"unpkg": "build/index.min.js",
 	"publishConfig": {
-		"access": "restricted"
+		"access": "public"
 	},
-	"unpkg": "dist/react-made-by.js",
 	"peerDependencies": {
-		"prop-types": "^15.6.0",
 		"react": "^16.0.0",
-		"react-dom": "^16.0.0"
+		"react-dom": "^16.0.0",
+		"webpack": "^2.6.1"
 	},
 	"devDependencies": {
-		"babel-core": "^6.21.0",
-		"babel-loader": "^7.1.4",
+		"babel-cli": "^6.24.1",
+		"babel-core": "^6.24.1",
+		"babel-loader": "^7.0.0",
+		"babel-plugin-transform-object-rest-spread": "^6.23.0",
+		"babel-plugin-transform-react-jsx": "^6.24.1",
 		"babel-preset-env": "^1.6.1",
 		"babel-preset-react": "^6.16.0",
 		"babel-preset-stage-0": "^6.24.1",
@@ -45,18 +55,13 @@
 		"prop-types": "^15.6.0",
 		"react": "^16.0.0",
 		"react-dom": "^16.0.0",
-		"sass-loader": "^8.0.0",
-		"style-loader": "^1.1.2",
-		"url-loader": "^3.0.0",
 		"webpack": "^4.5.0",
-		"webpack-cli": "^3.2.1"
+		"webpack-cli": "^3.3.10"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"prepublish": "rm -rf ./dist && npm run build"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "webpack --watch",
+		"build": "webpack --config webpack.config.js --mode production"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -72,8 +77,5 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	},
-	"dependencies": {
-		"react-scripts": "^3.3.0"
 	}
 }
