--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
-	"presets": ["react, es2015"],
-	"plugins": ["transform-object-rest-spread", "transform-react-jsx"]
+    "presets": [
+        "react",
+        "env",
+        "stage-0"
+    ]
 }
