--- a/example/package.json
+++ b/example/package.json
@@ -9,7 +9,9 @@
     "babel-loader": "^8.0.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-made-by": "^0.2.0",
+    "react-scripts": "^3.3.0",
+    "webpack": "^4.41.5"
   },
   "scripts": {
     "start": "react-scripts start",
