--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "react-made-by",
 	"version": "0.5.0",
 	"description": "React component to create a 'made by <name>' tag",
+	"files":[ "build" ],
 	"author": {
 		"name": "Yigit Alparslan",
 		"email": "alparslanyigitcan@gmail.com"
