--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
 		"react": "^16.8.0",
 		"react-dom": "^16.8.0",
 		"webpack": "^4.5.0",
-		"webpack-cli": "^3.3.10"
+		"webpack-cli": "^3.3.10",
+		"webpack-dev-server": "^3.7.1"
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
