Add style overriding, img and position layout props

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
 	"name": "react-made-by",
 	"version": "1.0.1",
 	"description": "React component to create a 'made by <name>' tag",
-	"files":[ "build/index.js" ],
+	"files": [
+		"build/index.js"
+	],
 	"author": {
 		"name": "Yigit Alparslan",
 		"email": "alparslanyigitcan@gmail.com"
